--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+/* @import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities'; */
+
+
 @font-face {
   font-family: Montserrat-Regular;
   src: url(./assets/fonts/Montserrat-Regular.ttf);
@@ -18,6 +23,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 
 body,
 html {
