--- a/src/components/pages/Dashboard.css
+++ b/src/components/pages/Dashboard.css
@@ -11,3 +11,43 @@
     font-size: large;
     color: rgba(228, 237, 241, 0.583);
 }
+
+.container-login100-form-btn {
+    display: block !important;
+    justify-content: center;
+}
+
+.smaller-button {
+    margin: 10px 10px !important;
+    text-decoration: none !important;
+    size: 50%;
+}
+
+.p2-label {
+    display: flex;
+    width: 120px;
+    font-weight: bold;
+}
+
+.p2 {
+    display: flex;
+    width: calc(100% - 120px);
+}
+.p2-container {
+    display: flex;
+    align-items: center;
+}
+
+.p2-label {
+    min-width: 120px;
+    font-weight: bold;
+}
+
+.p2-value {
+    flex: 1;
+    text-align: left;
+    font-weight: bolder;
+    font-size: large;
+    color: rgba(253, 254, 255, 0.72);
+    /* font-style: italic; */
+}
