--- a/src/App.css
+++ b/src/App.css
@@ -3,11 +3,39 @@
 
 /* Styles for Header Component */
 /* CSS Styles */
+@media (min-width: 276px) {
+.col-md-2 {
+    flex: 0 0 auto;
+    width: 16.6666667% !important;
+  }
+.col-md-10 {
+  flex: 0 0 auto;
+  width: 83.33333333% !important;
+}}
+
+.bt1 {
+  width: 20% !important;
+  margin-bottom: 20px;
+  margin-left: 550px;
+  background-color: #005bea !important;
+}
+@media (max-width: 1100px) {
+  .bt1 {
+      width: 50% !important;
+      margin-bottom: 20px;
+      align-self: center !important;
+      margin-left: 200px;
+    }
+
+}
+.nav-item:hover {
+  background-color: #bcf4ff;
+}
 .table1 {
   align-items: center;
   justify-items: center;
   padding: 25px 24px !important;
-  background-color: #bcf4ff;;
+  background-color: #bcf4ff;
   display: flex;
   flex-wrap: wrap;
   align-content: stretch;
@@ -382,7 +410,15 @@
   color: #1d88fe;
   background-color: #eaf4ff;
 }
+.color-badge1.red {
+  color: #ff5a65;
+  background-color: #ffeff0;
+}
 
+.color-badge1.orange {
+  color: #ff9e2c;
+  background-color: #fff3e4;
+}
 .color-badge {
   border-radius: 32px;
   padding: 4px 8px;
@@ -831,7 +867,7 @@ color: white;
 display: block;
 }
 
-table {
+/* table {
 background: #012B39;
 border-radius: 0.25em;
 border-collapse: collapse;
@@ -839,9 +875,9 @@ margin: 1em;
 width: 90%;
 max-width: 100%;
 table-layout: fixed;
-}
+} */
 
-th {
+/* th {
 border-bottom: 1px solid #364043;
 color: #E2B842;
 font-size: 0.85em;
@@ -863,7 +899,7 @@ transition: background 0.25s ease;
 
 tbody tr:hover {
 background: #014055;
-}
+} */
 
 .pagination1 {
 width: 97.5% !important;
@@ -938,13 +974,13 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
-table {
+/* table {
   background: #012B39;
   border-radius: 0.25em;
   border-collapse: collapse;
   margin: 1em;
   width: 100%;
-}
+} */
 
 .pg {
   display: flex;
@@ -967,7 +1003,7 @@ table {
   justify-content: space-around !important;
 }
 
-th {
+/* th {
   border-bottom: 1px solid #364043;
   color: #E2B842;
   font-size: 0.85em;
@@ -981,11 +1017,10 @@ td {
   font-weight: 400;
   padding: 0.65em 1em;
   max-width: 150px;
-  /* Adjust the max-width value as needed */
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-}
+} */
 
 .disabled td {
   color: #4F5F64;
